Create service-worker, save preferences in local storage

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,14 +6,20 @@
     "action": {
       "default_popup": "popup.html"
     },
+    "background": {
+      "service_worker": "scripts/service-worker.js",
+      "type": "module"
+    },
     "permissions": [
       "tabs",
-      "cookies"
+      "cookies",
+      "storage"
     ],
     "content_scripts": [
       {
-        "matches": ["https://leetcode.com/problemset/"],
+        "matches": ["https://leetcode.com/*"],
         "js": ["scripts/contentScript.js"]
       }
     ]
+    
   }
