--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "axios": "^1.6.7",
-    "bulma": "^0.9.4",
     "html-webpack-plugin": "^5.6.0",
+    "node.js": "^0.0.1-security",
     "workbox-webpack-plugin": "^7.0.0"
   }
 }
