Save user preferences
 Save last submit filter preferences in the storage
 Show preferences when the popup is open

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,7 +13,8 @@
     "permissions": [
       "tabs",
       "cookies",
-      "storage"
+      "storage",
+      "scripting"
     ],
     "content_scripts": [
       {
