--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,6 +21,9 @@
         "matches": ["https://leetcode.com/*"],
         "js": ["scripts/contentScript.js"]
       }
-    ]
+    ],
+    "icons": {
+      "128": "Pick LeetCode icon 128.png"
+    }
     
   }
